# awstopo

./: .gitignore  README.md  main.py  pyproject.toml
api/: api.py  deps.py
api/routes/: auth.py  scan.py
auth/: __init__.py  main.py
collectors/: __init__.py  base_collector.py  resources.py
collectors/sub_collectors/: ec2.py  rds.py  s3.py  vpc.py
config/: __init__.py  main.py
core/: pipeline.py  retry.py
db/: mongo.py  neo4j_store.py
exceptions/: __init__.py  main.py
graph/: graph.py  graph_builder.py
logger/: logging.py
synthesizer/: __init__.py  slim.py
