[project]
name = "awsvisualizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "fastapi>=0.115.0",
    "motor>=3.7.1",
    "neo4j>=6.1.0",
    "bcrypt>=4.0.0",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymongo>=4.16.0",
    "python-jose[cryptography]>=3.3.0",
    "structlog>=25.5.0",
    "tenacity>=9.1.4",
    "uvicorn[standard]>=0.34.0",
]
